--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "koa": "^2.12.0",
-    "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.0.1",
     "koa-static": "^5.0.0",
     "markdown-it": "^12.3.2",
@@ -22,6 +21,7 @@
   },
   "dependencies": {
     "koa-log4": "^2.3.2",
+    "koa2-formidable": "^1.0.3",
     "nodemon": "^2.0.15"
   }
 }
