--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,8 @@ node_modules
 .env.*.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.log*
+.log
 
 # Editor directories and files
 .idea
